# verity-prism

./: .coderabbit.yaml  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f29a7ad2392_add_audit_log_immutable_trigger.py  45d36706d164_phase2f_connectors_provenance.py  50f2b84a06aa_phase2f_workspace_render_mode.py  5a4ff7266708_initial_schema.py  a1b2c3d4e5f6_phase4_search_integrity_soft_delete.py  a3b8e1f92d44_add_is_deleted_to_documents.py  b2c3d4e5f6a7_phase2e_dual_confidence_and_flags.py  c12f44824c55_add_no_schema_status_and_extraction_.py  c8dd75f9d15c_schema_cleanup_obituary_and_sr_.py  cf7d3b604763_add_pgvector_embedding.py  (+4 more)
backend/app/: config.py  database.py  deps.py  main.py
backend/tests/: conftest.py  test_agent_tools.py  test_ai.py  test_audit.py  test_audit_immutability.py  test_auth.py  test_claude_client.py  test_config.py  test_connector_base.py  test_connector_irs_teos.py  test_connector_registry.py  test_connector_service.py  test_connectors_api.py  test_deps.py  test_documents.py  test_embedding_service.py  test_entities.py  test_export_service.py  test_extraction_caching.py  test_extraction_engine.py  test_extractions.py  test_field_validator.py  test_findings.py  test_leads.py  test_metering.py  test_normalization.py  test_notes.py  test_observability.py  test_pipeline.py  test_review.py  test_sanitize.py  test_schema_review.py  test_search.py  test_transactions.py  test_workspaces.py
docs/: fixes-todo.md  (+6 more)
(+214 files in other folders)
