[project]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "E712",  # SQLAlchemy uses == False/True in filter expressions — not a Python bool comparison
]

[tool.ruff.lint.per-file-ignores]
# F811: allow fixture redefinition in tests.
# E402: test files group imports beside the test sections they serve.
"tests/*" = ["F811", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
